--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400&display=swap" rel="stylesheet">
     <link rel="icon" href="./imgs/dragonfly.png" type="image/icon">
-    <title>Consulting Services</title>
+    <script src="./js/app.js" defer></script>
+    <script src="./js/canvas.js" defer></script>
+    <title>Alexandra Sauri</title>
 </head>
 
 <body>
@@ -23,7 +25,8 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="social_media">
+            <p style="color: black;" class="bubbles bubbles_off">turn on bubbles</p>
+            <!-- <div class="social_media">
                 <a href="#"><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-9759" width="28px">
                         <circle fill="#fff" cx="56.1" cy="56.1" r="55"></circle>
                         <path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
@@ -50,33 +53,30 @@
                     C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
                     c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path>
                     </svg></a>
-            </div>
+            </div> -->
         </div>
     </header>
     <main>
         <article class="card_text_wrapper">
             <div class="card_text_content">
-                <h1>If you’re interested in working with us, or collaborating on a project, we’d love to hear from you.
+                <h1>If you’re interested in working with me, or collaborating on a project, I’d love to hear from you.
                 </h1>
                 <h2>Get in Touch</h2>
-                <a href="mailto:hello@creativeagenty.com?subject = Email Subject&body = Message"
-                    class="email">hello@creativeagenty.com</a>
+                <a href="mailto:alexandrasauri19@gmail.com?subject = Email Subject&body = Message"
+                    class="email">alexandrasauri19@gmail.com</a>
                 <a href="#" class="phone">1 (234) 567-8910</a>
                 <h3>Address</h3>
                 <div class="address">
-                    2865 Monroe Avenue <br>
-                    Fort Myers <br>
-                    Province full Florida <br>
-                    33901 <br>
+                    Geirgia, <br>
+                    Tbilisi <br>
                 </div>
                 <div class="social_links">
-                    <a href="#" class="linkdin">Linkdin</a>
-                    <a href="#" class="instagram">Instagram</a>
-                    <a href="#" class="facebook">Facebook</a>
+                    <a href="https://www.linkedin.com/in/alexandra-sauri-8273ba150/" class="linkdin">Linkdin</a>
+                    <a href="https://github.com/a1excpunk" class="github">GitHub</a>
                 </div>
             </div>
         </article>
-        <article class="card_img"></article>
+        <div class="card_img"></div>
     </main>
     <aside class="side_menu">
         <img src="./imgs/icon-close.png" alt="close icon" class="side_menu_close">
@@ -85,43 +85,19 @@
                 <li class="side_home">Home</li>
             </a>
             <a href="#">
-                <li class="side_services">Services</li>
+                <li id="side_services">Skills</li>
             </a>
             <a href="#">
-                <li class="side_portfolio">Portfolio</li>
+                <li id="side_portfolio">Portfolio</li>
             </a>
             <a href="#">
-                <li class="side_team">Team</li>
-            </a>
-            <a href="#">
-                <li class="side_about">About</li>
+                <li id="side_about">About</li>
             </a>
         </ul>
     </aside>
-    <div class="modal"></div>
-    <footer>
-        <div> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos sed animi quisquam culpa voluptatem
-            architecto illum provident accusamus quae ad <a href="#">ipsum</a> dolor <a href="#">situpam</a> amet.
-        </div>
-        <p>&copy; Alexandra 2022 <a href="https://github.com/a1excpunk">Github</a></p>
-    </footer>
-    <script>
-        let burger_menu = document.querySelector('.burger_menu');
-        let side_menu_close = document.querySelector('.side_menu_close');
-        let side_menu = document.querySelector('.side_menu');
-        let modal = document.querySelector('.modal');
-        function closeSideBar(){
-            side_menu.style.transform = 'translateX(-100%)';
-            modal.style.display = 'none';
-        }
 
-        burger_menu.addEventListener('click', () => {
-            side_menu.style.transform = 'translateX(0)';
-            modal.style.display = 'block';
-        });
-        side_menu_close.addEventListener('click', closeSideBar);
-        modal.addEventListener('click', closeSideBar)
-    </script>
+    <canvas id="canvas1"></canvas>
+    <div class="modal"></div>
 </body>
 
 </html>
