ADD: on scroll menu items

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
           <span></span>
         </div>
       </div>
+      <div class="on_scroll_header">
+        <li>H</li>
+        <li>S</li>
+        <li>P</li>
+        <li>A</li>
+      </div>
     </header>
     <main id="hero_section">
       <article class="hero_wrapper">
