ADD: on scroll menu class to list items

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
       </div>
       <div class="on_scroll_header">
-        <li>H</li>
-        <li>S</li>
-        <li>P</li>
-        <li>A</li>
+        <li class="on_scroll_header_element">H</li>
+        <li class="on_scroll_header_element">S</li>
+        <li class="on_scroll_header_element">P</li>
+        <li class="on_scroll_header_element">A</li>
       </div>
     </header>
     <main id="hero_section">
