ADD: id marks for a tags for redirecting

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   <body>
     <header>
       <div class="header_content">
-        <a href="#hero_section"> Alexandra Sauri </a>
+        <a href="#home"> Alexandra Sauri </a>
         <div class="top_menu_wrapper">
           <ul class="top_menu">
-            <a href="#">
+            <a href="#home">
               <li class="top_home">Home</li>
             </a>
-            <a href="#">
-              <li class="top_services">Skills</li>
+            <a href="#skills">
+              <li class="top_skills">Skills</li>
             </a>
-            <a href="#">
+            <a href="#portfolio">
               <li class="top_portfolio">Portfolio</li>
             </a>
-            <a href="#">
+            <a href="#about">
               <li class="top_about">About</li>
             </a>
           </ul>
