DELETE: li tag in scroll menu and replaced with a tag for navigation

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         </div>
       </div>
       <div class="on_scroll_header">
-        <li class="on_scroll_header_element">H</li>
-        <li class="on_scroll_header_element">S</li>
-        <li class="on_scroll_header_element">P</li>
-        <li class="on_scroll_header_element">A</li>
+        <a href="#home" class="on_scroll_header_element">H</a>
+        <a href="#skills" class="on_scroll_header_element">S</a>
+        <a href="#portfolio" class="on_scroll_header_element">P</a>
+        <a href="#about" class="on_scroll_header_element">A</a>
       </div>
     </header>
-    <main id="hero_section">
+    <main id="home">
       <article class="hero_wrapper">
         <div class="hero_text_wrapper">
           <div class="hero_text_content">
