CHANGE: main and article tags to divs

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <a href="#about" class="on_scroll_header_element">A</a>
       </div>
     </header>
-    <main id="home">
-      <article class="hero_wrapper">
+    <div id="home">
+      <div class="hero_wrapper">
         <div class="hero_text_wrapper">
           <div class="hero_text_content">
             <h1>
@@ -295,8 +295,8 @@
             </defs>
           </svg>
         </div>
-      </article>
-    </main>
+      </div>
+    </div>
     <div class="lorem_ipsum_wrapper">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit deleniti,
