ADD: mock data for (skills, portfolio, about) scroll check

--- a/index.html
+++ b/index.html
@@ -305,6 +305,68 @@
         suscipit nostrum nisi.
       </p>
     </div>
+    <div id="skills">
+      <div class="hero_wrapper">
+        <div class="hero_text_wrapper">
+          <div class="hero_text_content">
+            <h1>
+              If you’re interested in working with me, or collaborating on a
+              project, I’d love to hear from you.
+            </h1>
+            <h2>Get in Touch</h2>
+            <div class="social_links">
+              <a
+                href="https://www.linkedin.com/in/alexandra-sauri-8273ba150/"
+                class="linkdin"
+                >Linkdin</a
+              >
+              <a href="https://github.com/a1excpunk" class="github">GitHub</a>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div id="portfolio">
+      <div class="hero_wrapper">
+        <div class="hero_text_wrapper">
+          <div class="hero_text_content">
+            <h1>
+              If you’re interested in working with me, or collaborating on a
+              project, I’d love to hear from you.
+            </h1>
+            <h2>Get in Touch</h2>
+            <div class="social_links">
+              <a
+                href="https://www.linkedin.com/in/alexandra-sauri-8273ba150/"
+                class="linkdin"
+                >Linkdin</a
+              >
+              <a href="https://github.com/a1excpunk" class="github">GitHub</a>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div id="about">
+      <div class="hero_wrapper">
+        <div class="hero_text_wrapper">
+          <div class="hero_text_content">
+            <h1>
+              If you’re interested in working with me, or collaborating on a
+              project, I’d love to hear from you.
+            </h1>
+            <h2>Get in Touch</h2>
+            <div class="social_links">
+              <a
+                href="https://www.linkedin.com/in/alexandra-sauri-8273ba150/"
+                class="linkdin"
+                >Linkdin</a
+              >
+              <a href="https://github.com/a1excpunk" class="github">GitHub</a>
+            </div>
+          </div>
+        </div>
+    </div>
+
+
     <aside class="side_menu_wrapper">
       <img
         src="./imgs/icon-close.png"
