ADD: inner links to side menu and classes to grab with eventlistener for side menu and modal close

--- a/index.html
+++ b/index.html
@@ -374,17 +374,17 @@
         class="side_menu_close"
       />
       <ul class="side_menu">
-        <a href="#">
-          <li id="side_home">Home</li>
+        <a href="#home" class="side_menu_item">
+          <li>Home</li>
         </a>
-        <a href="#">
-          <li id="side_services">Skills</li>
+        <a href="#skills" class="side_menu_item">
+          <li>Skills</li>
         </a>
-        <a href="#">
-          <li id="side_portfolio">Portfolio</li>
+        <a href="#portfolio" class="side_menu_item">
+          <li>Portfolio</li>
         </a>
-        <a href="#">
-          <li id="side_about">About</li>
+        <a href="#about" class="side_menu_item">
+          <li>About</li>
         </a>
       </ul>
     </aside>
