UPDATE: hero wrapper, made it seperate component for background effect

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </header>
     <div id="home">
-      <div class="hero_wrapper">
+      <div class="hero_wrapper">      </div>
         <div class="hero_text_wrapper">
           <div class="hero_text_content">
             <h1>
@@ -295,7 +295,7 @@
             </defs>
           </svg>
         </div>
-      </div>
+
     </div>
     <div class="lorem_ipsum_wrapper">
       <p>
