--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           </div>
         </div>
         <div class="hero_img">
+          <audio src="" id="key_audio"></audio>
           <svg
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
@@ -81,207 +82,207 @@
           >
             <g mask='url("#SvgjsMask1438")' fill="none">
               <g transform="translate(0, 0)" stroke-linecap="round">
-                <path
+                <path data-key="1" class="key"
                   d="M62.5 172.685 L62.5 210.185"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="2" class="key"
                   d="M62.5 238.31 L62.5 327.315"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="3" class="key"
                   d="M87.5 180.305 L87.5 236.555"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="4" class="key"
                   d="M87.5 264.68 L87.5 319.695"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="5" class="key"
                   d="M112.5 105.055 L112.5 161.305"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="6" class="key"
                   d="M112.5 189.43 L112.5 264.43"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="7" class="key"
                   d="M112.5 292.555 L112.5 394.945"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="8" class="key"
                   d="M137.5 79.345 L137.5 229.345"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="9" class="key"
                   d="M137.5 257.47 L137.5 313.72"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="10" class="key"
                   d="M137.5 341.845 L137.5 420.645"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="11" class="key"
                   d="M162.5 212.825 L162.5 287.175"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="12" class="key"
                   d="M187.5 218.125 L187.5 281.875"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="13" class="key"
                   d="M212.5 154.645 L212.5 285.895"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="14" class="key"
                   d="M212.5 314.02 L212.5 345.355"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="15" class="key"
                   d="M237.5 77.675 L237.5 115.175"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="16" class="key"
                   d="M237.5 143.3 L237.5 330.8"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="17" class="key"
                   d="M237.5 358.925 L237.5 422.325"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="18" class="key"
                   d="M262.5 204.845 L262.5 295.155"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="19" class="key"
                   d="M287.5 190.485 L287.5 309.515"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="20" class="key"
                   d="M312.5 150.225 L312.5 187.725"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="21" class="key"
                   d="M312.5 215.85 L312.5 349.775"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="22" class="key"
                   d="M337.5 109.625 L337.5 128.375"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="23" class="key"
                   d="M337.5 156.5 L337.5 287.75"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="24" class="key"
                   d="M337.5 315.875 L337.5 390.375"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="25" class="key"
                   d="M362.5 206.175 L362.5 224.925"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="26" class="key"
                   d="M362.5 253.05 L362.5 293.825"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="27" class="key"
                   d="M387.5 54.625 L387.5 167.125"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="28" class="key"
                   d="M387.5 195.25 L387.5 445.375"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="29" class="key"
                   d="M412.5 163.655 L412.5 182.405"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="30" class="key"
                   d="M412.5 210.53 L412.5 285.53"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="31" class="key"
                   d="M412.5 313.655 L412.5 336.355"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="32" class="key"
                   d="M437.5 101.755 L437.5 139.255"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="33" class="key"
                   d="M437.5 167.38 L437.5 336.13"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="34" class="key"
                   d="M437.5 364.255 L437.5 398.245"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="35" class="key"
                   d="M462.5 67.005 L462.5 292.005"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="36" class="key"
                   d="M462.5 320.13 L462.5 376.38"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="37" class="key"
                   d="M462.5 404.505 L462.5 433.005"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="38" class="key"
                   d="M487.5 229.435 L487.5 270.565"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="39" class="key"
                   d="M512.5 166.215 L512.5 184.965"
                   stroke-width="18.75"
                   stroke="rgba(39, 39, 39, 1)"
                 ></path>
-                <path
+                <path data-key="40" class="key"
                   d="M512.5 213.09 L512.5 333.785"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
                 ></path>
-                <path
+                <path data-key="41" class="key"
                   d="M537.5 221.965 L537.5 278.025"
                   stroke-width="18.75"
                   stroke="rgba(241, 196, 14, 1)"
