ADD: lorem ipsum running text class, style according to new design and add onClick functionality to stop moving if user wants to stop

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
     </div>
     <div class="lorem_ipsum_wrapper">
-      <p>
+      <p class="lorem_ipsum_text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit deleniti,
         magni modi facere fugiat impedit voluptate asperiores et, officiis,
         voluptatum omnis deserunt porro sequi praesentium cumque sapiente
